--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,14 @@
-body {
+.frame {
     display: flex;
-    padding: 100px;
+    flex-direction: row;
+    margin: 50px 100px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+.search{
+    margin-top: 30px;
+    margin-right: 40px;
+}
+.search-box{
+    height: 35px;
+    width: 200px;
 }
