--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang='ko'>
 
 <head>
 	<meta charset='utf-8' />
 	<link rel="stylesheet" href="/stylesheets/style.css" />
 	<link href='fullcalendar/main.css' rel='stylesheet' />
-	<script>
-		document.addEventListener('DOMContentLoaded', function () {
-			var calendarEl = document.getElementById('calendar');
-			var calendar = new FullCalendar.Calendar(calendarEl, {
-				height: '100%',
-				initialView: 'dayGridMonth'
-			});
-			calendar.render();
-		});
-	</script>
 </head>
 
+
 <body>
-	<div id='search'>
-		<input type="text" placeholder="검색할 캘린더를 입력하세요.">
+	<div class='frame'>
+		<div class='search'>
+			<input type="text" placeholder="검색할 캘린더를 입력하세요." class="search-box">
+		</div>
+		<div id='calendar' style="width: 80%;">
 	</div>
-	<div id='calendar'></div>
 </body>
 <script src='fullcalendar/main.js'></script>
+<script src='javascripts/main.js'></script>
+
 </html>
