--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,11 @@
 
 <head>
 	<meta charset='utf-8' />
-	<link rel="stylesheet" href="/stylesheets/style.css" />
 	<link href='fullcalendar/main.css' rel='stylesheet' />
+	<link rel="stylesheet" href="/stylesheets/style.css" />
+	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href='bootstrap-timepicker/css/bootstrap-timepicker.min.css' />
+
 </head>
 
 
@@ -13,10 +16,101 @@
 		<div class='search'>
 			<input type="text" placeholder="검색할 캘린더를 입력하세요." class="search-box">
 		</div>
-		<div id='calendar' style="width: 80%;">
+		<div id='calendar' style="width: 80%;"></div>
+
+		<!-- 일정 추가 MODAL -->
+		<div class="modal fade" tabindex="-1" role="dialog" id="eventModal">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title"></h4>
+					</div>
+					<div class="modal-body">
+
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-allDay">하루종일</label>
+								<input class='allDayNewEvent' id="edit-allDay" type="checkbox"></label>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-title">일정명</label>
+								<input class="inputModal" type="text" name="edit-title" id="edit-title"
+									required="required" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-start">시작</label>
+								<input class="inputModal" type="text" name="edit-start" id="edit-start" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-end">끝</label>
+								<input class="inputModal" type="text" name="edit-end" id="edit-end" />
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-type">구분</label>
+								<select class="inputModal" type="text" name="edit-type" id="edit-type">
+									<option value="카테고리1">카테고리1</option>
+									<option value="카테고리2">카테고리2</option>
+									<option value="카테고리3">카테고리3</option>
+									<option value="카테고리4">카테고리4</option>
+								</select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-color">색상</label>
+								<select class="inputModal" name="color" id="edit-color">
+									<option value="#D25565" style="color:#D25565;">빨간색</option>
+									<option value="#9775fa" style="color:#9775fa;">보라색</option>
+									<option value="#ffa94d" style="color:#ffa94d;">주황색</option>
+									<option value="#74c0fc" style="color:#74c0fc;">파란색</option>
+									<option value="#f06595" style="color:#f06595;">핑크색</option>
+									<option value="#63e6be" style="color:#63e6be;">연두색</option>
+									<option value="#a9e34b" style="color:#a9e34b;">초록색</option>
+									<option value="#4d638c" style="color:#4d638c;">남색</option>
+									<option value="#495057" style="color:#495057;">검정색</option>
+								</select>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-xs-12">
+								<label class="col-xs-4" for="edit-desc">설명</label>
+								<textarea rows="4" cols="50" class="inputModal" name="edit-desc"
+									id="edit-desc"></textarea>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer modalBtnContainer-addEvent">
+						<button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+						<button type="button" class="btn btn-primary" id="save-event">저장</button>
+					</div>
+					<div class="modal-footer modalBtnContainer-modifyEvent">
+						<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+						<button type="button" class="btn btn-danger" id="deleteEvent">삭제</button>
+						<button type="button" class="btn btn-primary" id="updateEvent">저장</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 	</div>
+
+
 </body>
+<script src="jquery/dist/jquery.js"></script>
+<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="moment/moment.js"></script>
 <script src='fullcalendar/main.js'></script>
 <script src='javascripts/main.js'></script>
+<script src="bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
 
 </html>
