--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,57 +7,74 @@
 	<link rel="stylesheet" href="/stylesheets/style.css" />
 	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href='bootstrap-timepicker/css/bootstrap-timepicker.min.css' />
-
+	<title><%= title %></title>
 </head>
 
-
 <body>
-	<div class='frame'>
-		<div class='search'>
-			<input type="text" placeholder="검색할 캘린더를 입력하세요." class="search-box">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand ms-5" href="/">Share Calendar</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link" href="/login">Login</a>
+					</li>
+				</ul>
+				<form class="d-flex">
+					<input class="form-control me-2" type="search" placeholder="캘린더를 검색하세요." aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Search</button>
+				</form>
+			</div>
 		</div>
-		<div id='calendar' style="width: 80%;"></div>
+	</nav>
 
-		<!-- 일정 추가 MODAL -->
-		<div class="modal fade" tabindex="-1" role="dialog" id="eventModal">
-			<div class="modal-dialog" role="document">
+
+	<div class='frame'>
+		<div id='calendar' style="width: 100%;"></div>
+		<!-- Modal -->
+		<div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title"></h4>
+						<h5 class="modal-title" id="exampleModalLabel"></h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
-
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-allDay">하루종일</label>
-								<input class='allDayNewEvent' id="edit-allDay" type="checkbox"></label>
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">하루종일</label>
+							<div class="col-sm-10">
+								<input class='allDayNewEvent form-check-input mt-0' id="edit-allDay"
+									type="checkbox"></label>
 							</div>
 						</div>
 
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-title">일정명</label>
-								<input class="inputModal" type="text" name="edit-title" id="edit-title"
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">일정명</label>
+							<div class="col-sm-10">
+								<input class="form-control" type="text" name="edit-title" id="edit-title"
 									required="required" />
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-start">시작</label>
-								<input class="inputModal" type="text" name="edit-start" id="edit-start" />
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">시작</label>
+							<div class="col-sm-10">
+								<input class="form-control" type="text" name="edit-start" id="edit-start" />
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-end">끝</label>
-								<input class="inputModal" type="text" name="edit-end" id="edit-end" />
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">끝</label>
+							<div class="col-sm-10">
+								<input class="form-control" type="text" name="edit-end" id="edit-end" />
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-type">구분</label>
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">구분</label>
+							<div class="col-sm-10">
 								<select class="inputModal" type="text" name="edit-type" id="edit-type">
 									<option value="카테고리1">카테고리1</option>
 									<option value="카테고리2">카테고리2</option>
@@ -66,9 +83,9 @@
 								</select>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-color">색상</label>
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">색상</label>
+							<div class="col-sm-10">
 								<select class="inputModal" name="color" id="edit-color">
 									<option value="#D25565" style="color:#D25565;">빨간색</option>
 									<option value="#9775fa" style="color:#9775fa;">보라색</option>
@@ -82,26 +99,27 @@
 								</select>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-xs-12">
-								<label class="col-xs-4" for="edit-desc">설명</label>
-								<textarea rows="4" cols="50" class="inputModal" name="edit-desc"
+						<div class="row mb-3">
+							<label for="inputEmail3" class="col-sm-2 col-form-label">설명</label>
+							<div class="col-sm-10">
+								<textarea rows="4" cols="46" class="inputModal" name="edit-desc"
 									id="edit-desc"></textarea>
 							</div>
 						</div>
 					</div>
 					<div class="modal-footer modalBtnContainer-addEvent">
-						<button type="button" class="btn btn-default" data-dismiss="modal">취소</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
 						<button type="button" class="btn btn-primary" id="save-event">저장</button>
 					</div>
 					<div class="modal-footer modalBtnContainer-modifyEvent">
-						<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
 						<button type="button" class="btn btn-danger" id="deleteEvent">삭제</button>
 						<button type="button" class="btn btn-primary" id="updateEvent">저장</button>
 					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
+				</div>
+			</div>
+		</div>
+
 	</div>
 
 
@@ -110,7 +128,8 @@
 <script src="bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="moment/moment.js"></script>
 <script src='fullcalendar/main.js'></script>
-<script src='javascripts/main.js'></script>
 <script src="bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
+<script src='javascripts/main.js'></script>
+<script src="javascripts/addEvent.js"></script>
 
 </html>
