회원가입 구현

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,113 +3,168 @@
 
 <head>
 	<meta charset='utf-8' />
-	<link href='fullcalendar/main.css' rel='stylesheet' />
+	<!--stylesheets-->
+	<link href='/fullcalendar/main.css' rel='stylesheet' />
 	<link rel="stylesheet" href="/stylesheets/style.css" />
-	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" href='bootstrap-timepicker/css/bootstrap-timepicker.min.css' />
-	<title><%= title %></title>
+	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href='/bootstrap-timepicker/css/bootstrap-timepicker.min.css' />
+	<title>Share Calendar</title>
 </head>
 
 <body>
 	<%- include('header.ejs')%>
 
-	<div class='frame'>
-		<div id='calendar' style="width: 100%;"></div>
+	<!--본문 flex row-->
+	<div class='d-flex justify-content-evenly mt-5'>
+		<!--왼쪽 캘린더 리스트 부분-->
+		<div class="list-group m" style="width:200px">
+			<div class="modal-header">
+				<p class="fw-bold fs-5 text-start">캘린더 목록</p>
+				<button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
+					data-bs-target="#addCategoryModal">+</button>
+			</div>
+			<ul class="list-group">
+				<li class="list-group-item">
+					<div class="form-check form-switch ">
+						<input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+						<label class="form-check-label" for="flexSwitchCheckDefault">Default
+							input</label>
+					</div>
+				</li>
+				<li class="list-group-item">
+					<div class="form-check form-switch ">
+						<input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+						<label class="form-check-label" for="flexSwitchCheckDefault">Default
+							input</label>
+					</div>
+				</li>
+				<li class="list-group-item">
+					<div class="form-check form-switch ">
+						<input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+						<label class="form-check-label" for="flexSwitchCheckDefault">Default
+							input</label>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<!--캘린더-->
+		<div id='calendar' style="width: 80%;"></div>
+	</div>
 
-		<!-- 이벤트 추가 모달 -->
-		<div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel"></h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					</div>
-					<div class="modal-body">
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">하루종일</label>
-							<div class="col-sm-10">
-								<input class='allDayNewEvent form-check-input mt-0' id="edit-allDay"
-									type="checkbox"></label>
-							</div>
+	<!-- 이벤트 추가 모달 -->
+	<div class="modal fade" id="addEventModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="calendar modal-title"></h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row mb-3">
+						<label class="col-sm-3 col-form-label">하루종일</label>
+						<div class="col">
+							<input class='allDayNewEvent form-check-input mt-1' id="edit-allDay"
+								type="checkbox"></label>
 						</div>
+					</div>
 
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">일정명</label>
-							<div class="col-sm-10">
-								<input class="form-control" type="text" name="edit-title" id="edit-title"
-									required="required" />
-							</div>
-						</div>
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">시작</label>
-							<div class="col-sm-10">
-								<input class="form-control" type="text" name="edit-start" id="edit-start" />
-							</div>
-						</div>
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">끝</label>
-							<div class="col-sm-10">
-								<input class="form-control" type="text" name="edit-end" id="edit-end" />
-							</div>
-						</div>
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">구분</label>
-							<div class="col-sm-10">
-								<select class="inputModal" type="text" name="edit-type" id="edit-type">
-									<option value="카테고리1">카테고리1</option>
-									<option value="카테고리2">카테고리2</option>
-									<option value="카테고리3">카테고리3</option>
-									<option value="카테고리4">카테고리4</option>
-								</select>
-							</div>
-						</div>
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">색상</label>
-							<div class="col-sm-10">
-								<select class="inputModal" name="color" id="edit-color">
-									<option value="#D25565" style="color:#D25565;">빨간색</option>
-									<option value="#9775fa" style="color:#9775fa;">보라색</option>
-									<option value="#ffa94d" style="color:#ffa94d;">주황색</option>
-									<option value="#74c0fc" style="color:#74c0fc;">파란색</option>
-									<option value="#f06595" style="color:#f06595;">핑크색</option>
-									<option value="#63e6be" style="color:#63e6be;">연두색</option>
-									<option value="#a9e34b" style="color:#a9e34b;">초록색</option>
-									<option value="#4d638c" style="color:#4d638c;">남색</option>
-									<option value="#495057" style="color:#495057;">검정색</option>
-								</select>
-							</div>
-						</div>
-						<div class="row mb-3">
-							<label for="inputEmail3" class="col-sm-2 col-form-label">설명</label>
-							<div class="col-sm-10">
-								<textarea rows="4" cols="46" class="inputModal" name="edit-desc"
-									id="edit-desc"></textarea>
-							</div>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">일정명</label>
+						<div class="col-sm-10">
+							<input class="form-control" type="text" name="edit-title" id="edit-title"
+								required="required" />
 						</div>
 					</div>
-					<div class="modal-footer modalBtnContainer-addEvent">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-						<button type="button" class="btn btn-primary" id="save-event">저장</button>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">시작</label>
+						<div class="col-sm-10">
+							<input type="date" class="form-control" type="text" name="edit-start" id="edit-start" />
+						</div>
 					</div>
-					<div class="modal-footer modalBtnContainer-modifyEvent">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-						<button type="button" class="btn btn-danger" id="deleteEvent">삭제</button>
-						<button type="button" class="btn btn-primary" id="updateEvent">저장</button>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">끝</label>
+						<div class="col-sm-10">
+							<input type="date"  class="form-control" type="text" name="edit-end" id="edit-end" />
+						</div>
 					</div>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">구분</label>
+						<div class="col-sm-10">
+							<select type="text" name="edit-type" id="edit-type">
+								<option value="카테고리1">카테고리1</option>
+								<option value="카테고리2">카테고리2</option>
+								<option value="카테고리3">카테고리3</option>
+								<option value="카테고리4">카테고리4</option>
+							</select>
+						</div>
+					</div>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">색상</label>
+						<div class="col-sm-10">
+							<select name="color" id="edit-color">
+								<option value="#D25565" style="color:#D25565;">빨간색</option>
+								<option value="#9775fa" style="color:#9775fa;">보라색</option>
+								<option value="#ffa94d" style="color:#ffa94d;">주황색</option>
+								<option value="#74c0fc" style="color:#74c0fc;">파란색</option>
+								<option value="#f06595" style="color:#f06595;">핑크색</option>
+								<option value="#63e6be" style="color:#63e6be;">연두색</option>
+								<option value="#a9e34b" style="color:#a9e34b;">초록색</option>
+								<option value="#4d638c" style="color:#4d638c;">남색</option>
+								<option value="#495057" style="color:#495057;">검정색</option>
+							</select>
+						</div>
+					</div>
+					<div class="row mb-3">
+						<label class="col-sm-2 col-form-label">설명</label>
+						<div class="col-sm-10">
+							<textarea rows="4" cols="46" name="edit-desc"></textarea>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer modalBtnContainer-addEvent">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+					<button type="button" class="btn btn-primary" id="addEvent">저장</button>
+				</div>
+				<div class="modal-footer modalBtnContainer-modifyEvent">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+					<button type="button" class="btn btn-danger" id="deleteEvent">삭제</button>
+					<button type="button" class="btn btn-primary" id="updateEvent">저장</button>
 				</div>
 			</div>
 		</div>
-
 	</div>
 
-
+	<!-- 카테고리 추가 모달 -->
+	<div class="modal fade" id="addCategoryModal" tabindex="-1">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title">카테고리 추가</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row mb-3">
+						<label for="inputEmail3" class="col-sm-2 col-form-label">하루종일</label>
+						<div class="col-sm-10">
+							<input class='allDayNewEvent form-check-input mt-0' id="edit-allDay"
+								type="checkbox"></label>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer modalBtnContainer-addEvent">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+					<button type="button" class="btn btn-primary" id="addCalendar">저장</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
-<script src="jquery/dist/jquery.js"></script>
-<script src="bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="moment/moment.js"></script>
-<script src='fullcalendar/main.js'></script>
-<script src="bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
-<script src='javascripts/main.js'></script>
-<script src="javascripts/addEvent.js"></script>
 
+<script src="/jquery/dist/jquery.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/moment/moment.js"></script>
+<script src='/fullcalendar/main.js'></script>
+<script src="/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
+<script src='/javascripts/main.js'></script>
+<script src="/javascripts/addEvent.js"></script>
 </html>
