--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <title>nav</title>
 </head>
 
@@ -43,7 +43,6 @@
                     <h5 class="modal-title" id="exampleModalLabel">LOGIN</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-
                 <div class="modal-body">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Id</span>
@@ -55,12 +54,11 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Sign up</button>
+                    <a class="btn btn-secondary" href="/user/join">Sign up</a>
                     <button type="button" class="btn btn-primary">Login</button>
                 </div>
             </div>
         </div>
     </div>
 </body>
-
 </html>
