--- a/views/join.ejs
+++ b/views/join.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <title>Sign Up</title>
 </head>
 
@@ -16,28 +16,29 @@
             <h1>Sign Up</h1>
         </div>
         <form method="POST" action="/user/join">
-            <div class="row mb-3 justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email">
+                    <input type="email" class="form-control" name="email" id="email" required>
+                    <p id="emailcheck"></p>
                 </div>
             </div>
             <div class="row mb-3 justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password">
+                    <input type="password" class="form-control" name="password" required>
                 </div>
             </div>
             <div class="row mb-3 justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Confirm password</label>
-                    <input type="password" class="form-control">
+                    <input type="password" class="form-control required">
                 </div>
             </div>
             <div class="row mb-5 justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Nickname</label>
-                    <input type="text" class="form-control" name="nickname">
+                    <input type="text" class="form-control" name="nickname" required>
                 </div>
             </div>
             <div class="row mb-3 justify-content-center">
@@ -47,5 +48,6 @@
     </div>
 
 </body>
-
+<script src="/jquery/dist/jquery.js"></script>
+<script src='/javascripts/join.js'></script>
 </html>
