--- a/views/join.ejs
+++ b/views/join.ejs
@@ -26,13 +26,14 @@
             <div class="row mb-3 justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Password</label>
-                    <input type="password" class="form-control" name="password" required>
+                    <input type="password" class="form-control" name="password" id="pw1" required>
                 </div>
             </div>
             <div class="row mb-3 justify-content-center">
                 <div class="col-3">
                     <label class="form-label">Confirm password</label>
-                    <input type="password" class="form-control required">
+                    <input type="password" class="form-control" id="pw2" required>
+                    <p id="pwcheck"></p>
                 </div>
             </div>
             <div class="row mb-5 justify-content-center">
