--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,14 +13,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand ms-5" href="/">Share Calendar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="캘린더를 검색하세요." aria-label="Search">
+                    <input class="form-control me-2" type="search" placeholder="캘린더를 검색하세요.">
                     <button class="btn btn-outline-success me-3" type="submit">Search</button>
                 </form>
                 <ul class="navbar-nav mb-2 mb-lg-0">
@@ -33,11 +28,6 @@
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
                             data-bs-target="#loginModal">Login</button>
-                    </li>
-                    <% } %>
-                    <% if(error_messages){ %>
-                    <li class="nav-item">
-                        <p><%= error_messages %></p>
                     </li>
                     <% } %>
                 </ul>
