--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,15 @@
 	<link href='/fullcalendar/main.css' rel='stylesheet' />
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
 	<title>Share Calendar</title>
+	<script>
+		if ('<%= errorMsg %>') {
+			alert('<%= errorMsg %>')
+		}
+	</script>
 </head>
 
 <body>
 	<%- include('header.ejs')%>
-
 	<!--본문 flex row-->
 	<div class='d-flex justify-content-evenly mt-5'>
 		<!--왼쪽 캘린더 리스트 부분-->
@@ -82,7 +86,7 @@
 					<div class="row mb-3">
 						<label class="col-sm-2 col-form-label">끝</label>
 						<div class="col-sm-10">
-							<input type="date"  class="form-control" type="text" name="edit-end" id="edit-end" />
+							<input type="date" class="form-control" type="text" name="edit-end" id="edit-end" />
 						</div>
 					</div>
 					<div class="row mb-3">
@@ -163,4 +167,5 @@
 <script src='/fullcalendar/main.js'></script>
 <script src='/javascripts/main.js'></script>
 <script src="/javascripts/addEvent.js"></script>
+
 </html>
