--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,11 +12,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand ms-5" href="/">Share Calendar</a>
+            <a class="navbar-brand ms-5 me-3" href="/">Share Calendar</a>
             <div class="collapse navbar-collapse">
                 <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="캘린더를 검색하세요.">
-                    <button class="btn btn-outline-success me-3" type="submit">Search</button>
+                    <input class="form-control me-3" type="search" placeholder="캘린더를 검색하세요.">
+                    <button type="submit" class="btn btn-outline-success me-3" >Search</button>
                 </form>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <% if(isAuthenticated){ %>
@@ -26,12 +26,11 @@
                     <% } else { %>
                     <li class="nav-item">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal"
-                            data-bs-target="#loginModal">Login</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            data-bs-target="#loginModal" id="login-btn">Login</button>
                     </li>
                     <% } %>
                 </ul>
-
             </div>
         </div>
     </nav>
@@ -65,5 +64,4 @@
     </div>
 </body>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </html>
