--- a/views/join.ejs
+++ b/views/join.ejs
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href="/stylesheets/font.css" />
+    <link rel='stylesheet' href="/stylesheets/font.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Noto+Sans+KR:wght@300;400&display=swap"
+		rel="stylesheet">
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <title>Sign Up</title>
 </head>
@@ -43,7 +50,7 @@
                 </div>
             </div>
             <div class="row mb-3 justify-content-center">
-                    <input class="btn btn-primary" type="submit" value="Submit" style="width:300px">
+                <input class="btn btn-primary" type="submit" value="Submit" style="width:300px">
             </div>
         </form>
     </div>
@@ -51,4 +58,5 @@
 </body>
 <script src="/jquery/dist/jquery.js"></script>
 <script src='/javascripts/join.js'></script>
+
 </html>
