--- a/public/stylesheets/font.css
+++ b/public/stylesheets/font.css
@@ -2,3 +2,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
+#search_title{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 500;
+}
