캘린더 검색 완료

--- a/public/stylesheets/font.css
+++ b/public/stylesheets/font.css
@@ -2,7 +2,7 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
-#search_title{
+.noto-font{
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
 }
