--- a/views/index_calendar_list.ejs
+++ b/views/index_calendar_list.ejs
@@ -61,7 +61,7 @@
                         <div class="row mb-3">
                             <label class="col-sm-2 col-form-label">설명</label>
                             <div class="col-sm-10">
-                                <textarea rows="2" name="description"></textarea>
+                                <textarea class="p-2" rows="2" cols="40" name="description"></textarea>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -84,7 +84,7 @@
                             <label class="col-sm-3 col-form-label">공개 범위</label>
                             <div class="form-check form-check-inline col-sm-2 mt-2">
                                 <input class="form-check-input" type="radio" name="bounds" value="public"
-                                    id="inlineRadio1">
+                                    id="inlineRadio1" required>
                                 <label class="form-check-label" for="inlineRadio1">공개</label>
                             </div>
                             <div class="form-check form-check-inline col-sm-3 mt-2">
