--- a/views/index_calendar_list.ejs
+++ b/views/index_calendar_list.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -26,7 +27,8 @@
                 calendars.forEach(function(item){%>
             <li class="list-group-item">
                 <div class="form-check form-switch ">
-                    <input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>" checked>
+                    <input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>"
+                        onclick="handleClick('<%= item.calendar_id %>')" checked>
                     <label class="form-check-label" for="<%= item.calendar_id %>"><%= item.title %></label>
                 </div>
             </li>
@@ -51,7 +53,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="/calendar/add" method="POST">
+                    <form action="/calendar" method="POST">
                         <div class="row mb-3">
                             <label class="col-sm-2 col-form-label p-2 me-3">캘린더명</label>
                             <div class="col-sm-9 p-0">
@@ -104,5 +106,23 @@
         </div>
     </div>
 </body>
+<script src="/jquery/dist/jquery.js"></script>
+<script>
+    function handleClick(calendarId) {
+        const visible=$('#calendarId').is(":checked")
+        //const visible = this.val;
+        //console.log(visible);
+        //console.log(calendarId);
+        const sendData = {
+            visible: visible,
+            calendarId: calendarId
+        } 
+        $.ajax({
+            method: 'PUT',
+            url: '/calendar/visible',
+            data: sendData
+        })
+    }
+</script>
 
 </html>
